# i-am-human

./: .gitignore  LICENSE  README.md  nearcon-hackathon-example.md
.github/: CODEOWNERS
.github/workflows/: lint.yml  rust.yml
contracts/: .clippy.toml  .gitignore  Cargo.toml  Makefile  Makefile-common.mk  README.md
contracts/blacklist-human-addresses/: Cargo.toml  Makefile  README.md
contracts/blacklist-human-addresses/src/: lib.rs
contracts/community-open/: Cargo.toml  README.md
contracts/community-open/src/: errors.rs  lib.rs  migrate.rs  storage.rs
contracts/community-sbt/: CHANGELOG.md  Cargo.toml  README.md
contracts/community-sbt/src/: errors.rs  events.rs  interfaces.rs  lib.rs  metadata.rs  migrate.rs  storage.rs
contracts/community-sbt/tests/: workspaces.rs
contracts/cost/: Cargo.toml  README.md
contracts/cost/src/: lib.rs
contracts/demo-issuer/: Cargo.toml  README.md
contracts/demo-issuer/src/: lib.rs
contracts/deployed/: registry-v1-mainnet.wasm  registry-v1-testnet.wasm  registry.wasm
contracts/easy-poll/: Cargo.toml  README.md
contracts/easy-poll/src/: constants.rs  errors.rs  events.rs  ext.rs  lib.rs  storage.rs
contracts/easy-poll/tests/: workspaces.rs
contracts/easy_poll/: Cargo.toml
contracts/easy_poll/src/: lib.rs  storage.rs
contracts/human_checker/: Cargo.toml  README.md
contracts/human_checker/src/: ext.rs  lib.rs
contracts/human_checker/tests/: workspaces.rs
contracts/kudos/: .gitignore  Cargo.toml  README.md
contracts/kudos/src/: consts.rs  contract.rs  external_db.rs  lib.rs  misc.rs  public.rs  registry.rs  settings.rs  types.rs  utils.rs
contracts/kudos/src/callbacks/: common.rs  exchange_kudos_for_sbt.rs  give_kudos.rs  leave_comment.rs  mod.rs  upvote_kudos.rs  utils.rs
contracts/kudos/src/tests/: mod.rs  tests_exchange_kudos_for_sbt.rs  utils.rs
contracts/kudos/tests/: test_kudos.rs  test_required_deposit.rs  test_social_db.rs  types.rs  utils.rs  workspaces.rs
contracts/minifier/: README.md  minify.sh  minify_contracts.sh
contracts/oracle/: CHANGELOG.md  Cargo.toml  Makefile  README.md  babel.config.json  package.json
contracts/oracle/integration/: test-callback.ava.js  test-oracle.ava.js  test-storage.ava.js
contracts/oracle/src/: checks.rs  errors.rs  lib.rs  metadata.rs  migrate.rs  storage.rs  util.rs
contracts/oracle/tests/: integration_test.rs  integration_tests.rs
contracts/registry/: CHANGELOG.md  Cargo.toml  README.md
contracts/registry/src/: errors.rs  events.rs  lib-migrations.txt  lib.rs  migrate.rs  registry.rs  storage.rs  testing.rs
contracts/registry/tests/: workspaces.rs
contracts/registry/tests/contracts/: registry.wasm
contracts/sbt/: Cargo.toml  README.md
contracts/sbt/src/: events.rs  lib.rs  metadata.rs
contracts/soulbound/: Cargo.toml  README.md
contracts/soulbound-class/: Cargo.toml  README.md
contracts/soulbound-class/src/: lib.rs
contracts/soulbound/src/: events.rs  interfaces.rs  lib.rs  metadata.rs  storage.rs
contracts/test-util/: Cargo.toml
contracts/test-util/src/: common.rs  lib.rs  oracle.rs  utils.rs
contracts/tests/: Cargo.toml
contracts/tests/integration/: test_oracle_sbt.rs
contracts/tests/src/: lib.rs  utils.rs  workspaces.rs
contracts/ubi/: Cargo.toml
contracts/ubi/src/: lib.rs
