[workspace]
members = [
    "sbt",
    "cost",
    "community-sbt",
    "oracle",
    "registry",
    "soulbound-class",
    "easy-poll",
    "human_checker",
    "ubi",
    "demo-issuer",
]


[workspace.package]
edition = "2021"
license = "Mozilla Public License Version 2.0"
repository = "https://github.com/near-ndc/i-am-human"

# compilation profile for a release target
[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization), z is recommended usually
# 3  all optimiations
opt-level = "s"
# link time optimization
lto = true
panic = "abort"
overflow-checks = true
debug = false
debug-assertions = false
rpath = false

[workspace.dependencies]
near-sdk = { version = "^4.1.1", features = ["unstable"] }
near-contract-standards = "^4.1.1"
uint = { version = "^0.9.5", default-features = false }
serde_json = "^1.0"
ed25519-dalek = "1"
near-abi = "0.3.0"
schemars = "0.8.12"
pretty_assertions = "1.4.0"
anyhow = "1.0.71"
tokio = { version = "1.29.1", features = ["full"] }
workspaces = { version = "0.7.0", features = ["unstable"] }
near-primitives = "0.17.0"
near-units = "0.2.0"
tracing = "0.1.37"
