[workspace]
members = [
    "sbt",
    "cost",
    "community-sbt",
    "oracle",
    "registry",
    "soulbound-class",

    "human_checker",
    "ubi",
    "tests",
    "demo-issuer",
]


[workspace.package]
edition = "2021"
license = "Mozilla Public License Version 2.0"
repository = "https://github.com/near-ndc/i-am-human"

[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization), z is recommended usually
# 3  all optimiations
opt-level = "s"
# link time optimization
lto = true
panic = "abort"
# overflow-checks = true
# debug = false
# debug-assertions = false
# rpath = false

[profile.test]
panic = "abort"
overflow-checks = true
rpath = false


[workspace.dependencies]
anyhow = "1.0.71"
ed25519-dalek = "1"
near-abi = "0.3.0"
near-contract-standards = "^4.1.1"
near-crypto = "0.17"
near-primitives = "0.17.0"
near-sdk = { version = "^4.1.1", features = ["unstable"] }
near-units = "0.2.0"
pretty_assertions = "1.4.0"
schemars = "0.8.12"
serde_json = { version = "^1.0", features = ["raw_value"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
uint = { version = "^0.9.5", default-features = false }

// test dependencies
rand = { version = "^0.7", default-features = false }
assert_matches = "1.5.0"
workspaces = { version = "0.7.0", features = ["unstable"] }