[package]
name = "easy-poll"
version = "0.0.1"
authors = [
    "NDC GWG (https://near.social/#/mob.near/widget/ProfilePage?accountId=govworkinggroup.near)",
]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

cost = { path = "../cost" }
sbt = { path = "../sbt" }

[dev-dependencies]
pretty_assertions.workspace = true
anyhow.workspace = true
tokio.workspace = true
workspaces.workspace = true
near-primitives.workspace = true
near-units.workspace = true
tracing.workspace = true
test-util = { path = "../test-util" }
