[package]
name = "human_checker"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

sbt = { path = "../sbt" }

[dev-dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
workspaces = { version = "0.7.0", features = ["unstable"] }
near-units = "0.2.0"
