[package]
name = "human_checker"
version = "1.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

sbt = { path = "../sbt" }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
near-workspaces.workspace = true
near-units.workspace = true
