[package]
name = "oracle-sbt"
version = "1.0.0"
authors = ["Robert Zaremba 'https://zaremba.ch/'"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true

cost = { path = "../cost" }
sbt = { path = "../sbt" }

[dev-dependencies]
rand = "^0.7"
near-primitives.workspace = true
