[package]
name = "oracle-sbt"
version = "1.0.1"
authors = ["Robert Zaremba 'https://zaremba.ch/'"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

cost = { path = "../cost" }
sbt = { path = "../sbt" }

[dev-dependencies]
rand = "^0.7"
near-primitives.workspace = true
ed25519-dalek.workspace = true

# integration tests
pretty_assertions.workspace = true
anyhow.workspace = true
tokio.workspace = true
near-workspaces.workspace = true
near-units.workspace = true
tracing.workspace = true
near-crypto = "^0"
chrono = "0.4.26"

test-util = { path = "../test-util" }
