[package]
name = "registry"
version = "1.1.0"
authors = ["Robert Zaremba 'https://zaremba.ch/'"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

sbt = { path = "../sbt" }
cost = { path = "../cost" }

[dev-dependencies]
pretty_assertions = "^1.3"
# assertables = "^7"
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
workspaces = { version = "0.7.0", features = ["unstable"] }
near-primitives = "0.17.0"
near-units = "0.2.0"
tracing = "0.1"
