[package]
name = "sbt"
version = "1.1.0"
authors = ["Robert Zaremba 'https://zaremba.ch/'"]
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
near-contract-standards.workspace = true

[dev-dependencies]
