[package]
name = "test-util"
version = "1.0.0"
authors = [
    "NDC GWG (https://near.social/#/mob.near/widget/ProfilePage?accountId=govworkinggroup.near)",
]
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true
near-workspaces.workspace = true
anyhow.workspace = true
near-units.workspace = true
ed25519-dalek.workspace = true
sbt = { path = "../sbt" }
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
near-crypto = "^0"

[dev-dependencies]
