[package]
name = "tests"
version = "0.1.0"
edition = "2021"
authors = ["Kirill QQ <zeliondragon@gmail.com>"]

[dependencies]
oracle-sbt = { path = "../oracle/" }
registry = { path = "../registry/" }
ed25519-dalek.workspace = true
near-sdk.workspace = true
near-contract-standards.workspace = true
near-primitives.workspace = true
assert_matches.workspace = true
workspaces.workspace = true
near-units.workspace = true
tokio.workspace = true
anyhow.workspace = true

near-crypto = "^0"
chrono = "0.4.26"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng" ] }

[[test]]
name = "test_oracle_sbt"
path = "./integration/test_oracle_sbt.rs"
