[package]
name = "ubi"
version = "0.0.1"
authors = ["Robert Zaremba 'https://zaremba.ch/'"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
